Refatorando request e criando mappers